--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body style="background-image=url('')">
   
-    <img class="github-banner" style="position: absolute; top: 0; right: 0; border: 0;" src="https://github.com/vaibhavkeshav/hackdays/raw/master/hampster.png">
- 
+   
   <snake>Loading...</snake>
-</body>
+</body style="background-color:#ddddd">
 
 </html>
