--- a/src_old/index.html
+++ b/src_old/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body >
+<body style="background-image=url('https://raw.githubusercontent.com/vaibhavkeshav/hackdays/master/back.png')">
   
    
   <snake>Loading...</snake>
-</body style="background-color:#ddddd">
+</body class="body">
 
 </html>
